# omnibase_spi

./: .gitignore  .markdown-link-check.json  .mypy.ini  .onexingested  .pre-commit-config-push.yaml  .pre-commit-config-spi.yaml  .pre-commit-config.yaml  AGENT.md  AGENT_8_FINAL_VALIDATION_REPORT.md  AGENT_SPAWN_INSTRUCTIONS.md  CHANGELOG.md  CLAUDE.md  COMPUTE_NODE_TEMPLATE.md  DEPENDENCY_UPDATE_SUMMARY.md  EFFECT_NODE_TEMPLATE.md  ENHANCED_NODE_PATTERNS.md  EXECUTIVE_SUMMARY.md  MIGRATION.md  OMNIBASE_CORE_MIGRATION_REPORT.md  OMNI_ECOSYSTEM_STANDARDIZATION_FRAMEWORK.md  ORCHESTRATOR_NODE_TEMPLATE.md  PROTOCOL_CONTAINER_IMPLEMENTATION.md  README.md  REDUCER_NODE_TEMPLATE.md  REFACTORING_SUMMARY.md  SCRIPT_BUG_FIXES_REPORT.md  SPI_REMEDIATION_PLAN.md  VALIDATION_FIXES_ROADMAP.md  VALIDATION_FIXES_SUMMARY.md  VERSION_BUMP_SUMMARY.md  WORKFLOW_TEST_ANALYSIS.md  analyze_protocols.py  audit-results.json  check_duplicates.py  check_duplicates_debug.py  check_duplicates_fixed.py  comprehensive_analysis_report.md  comprehensive_spi_validation_20250929_114058.json  comprehensive_spi_validation_20250929_115128.json  comprehensive_spi_validation_20250929_120353.json  (+17 more)
.claude/: architecture-handshake.md  settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.serena/: project.yml
architecture-handshakes/: validator-requirements-baseline.yaml  validator-requirements.yaml
docs/: CONTRIBUTING.md  DEPRECATIONS.md  GLOSSARY.md  MVP_PLAN.md  PROTOCOL_SEQUENCE_DIAGRAMS.md  QUICK-START.md  README.md  SCRIPT_BUG_FIXES_VERIFICATION.md  TESTING.md  VALIDATION_INTEGRATION_PLAN.md  contributing.md  memory_protocols_guide.md  migration.md  protocol-composition-patterns.md  protocol-migration-guide.md  protocol-selection-guide.md  quick-start.md  testing.md
examples/: protocol_container_usage.py
scripts/: analyze_duplicates.py  analyze_inheritance_patterns.py  ast_spi_validator.py  auto_fix_protocol_compliance.py  check_links.py  check_unused_exports.py  compare_import_performance.py  comprehensive_forward_ref_fix.py  docstring_checker.py  export_allowlist.txt  final_docstring_fix.py  fix_agent_pool_formatting.py  fix_all_missing_ellipsis.py  fix_all_quote_issues.py  fix_async_patterns.py  fix_distributed_orchestrator.py  fix_docstring_openers.py  fix_double_quotes.py  fix_escape_sequences.py  fix_forward_references.py  fix_hardcoded_defaults.py  fix_indented_ellipsis.py  fix_malformed_methods.py  fix_malformed_quotes.py  fix_malformed_union_types.py  fix_memory_domain.py  fix_memory_signatures.py  fix_missing_ellipsis.py  fix_path_imports.py  fix_protocol_ellipsis.py  fix_protocol_format.py  fix_remaining_docstrings.py  fix_runtime_checkable_imports.py  fix_spi_typing_patterns.py  fix_spi_typing_patterns_README.md  fix_spi_violations.py  generate_batch3_docstrings.py  import_performance_analyzer.py  intelligence_hook.py  modernize_typing.py  (+13 more)
tests/: __init__.py  conftest.py  test_deprecation_warnings.py  test_exceptions.py  test_forward_references.py  test_import_performance_optimization.py  test_protocol_behavior.py  test_protocol_container.py  test_protocol_contract.py  test_protocol_imports.py  test_protocol_service_resolver.py  test_protocol_snapshot.py  test_script_bugs.py  test_script_edge_cases.py  test_simple_imports.py  test_unused_exports.py  test_validation_integration.py
(+893 files in other folders)
