[tool.poetry]
name = "omnibase-spi"
version = "0.0.2"
description = "ONEX Service Provider Interface - Protocol definitions"
authors = ["OmniNode Team <team@omninode.ai>"]
license = "MIT"
readme = "README.md"
packages = [{include = "omnibase", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
typing-extensions = "^4.5.0"
pydantic = "^2.11.7"

[tool.poetry.group.dev.dependencies]
mypy = "^1.0.0"
black = "^23.0.0"
isort = "^5.12.0"
pre-commit = "^3.0.0"
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88